[tool.poetry]
name = "acdn_sshelper"
version = "0.1.0"
license = "MIT"
description = "Generate SSH certificate and config for cloud instances."
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-commas = "^2.0.0"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6.2.2"

[tool.poetry.scripts]
acdn-sshelper = "acdn_sshelper.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
